fixup! fixup! fixup! Implement solidity test sharding + caching

--- a/.github/actions/setup-hardhat/action.yaml
+++ b/.github/actions/setup-hardhat/action.yaml
@@ -41,7 +41,8 @@ runs:
           contracts/cache/
           contracts/artifacts/
         key: contracts-${{ inputs.shard }}-${{ runner.os }}-${{ inputs.cache-version }}-${{ hashFiles('contracts/pnpm.lock', 'contracts/hardhat.config.ts', '${{ steps.cache-key.outputs.result }}' )
-        restore-keys: contracts-${{ inputs.shard }}-${{ runner.os }}-${{ inputs.cache-version }}-
+        restore-keys: |
+          contracts-${{ inputs.shard }}-${{ runner.os }}-${{ inputs.cache-version }}-
 
     # - name: Compile contracts
     #   shell: bash
