--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "**/y18n": "^5.0.5"
   },
   "dependencies": {
+    "@openzeppelin/contracts-upgradeable": "^4.8.0-rc.1",
     "tslib": "^1.11.1"
   }
 }
