--- a/contracts/package.json
+++ b/contracts/package.json
@@ -23,13 +23,24 @@
     "src/",
     "abi/"
   ],
+  "pnpm": {
+    "_comment": "See https://github.com/ethers-io/ethers.js/discussions/2849#discussioncomment-2696454",
+    "overrides": {
+      "ethers": "5.6.1",
+      "@ethersproject/abi": "5.6.1",
+      "@ethersproject/bignumber": "5.6.1",
+      "@ethersproject/contracts": "5.6.1",
+      "@ethersproject/providers": "5.6.1",
+      "@ethersproject/random": "5.6.1"
+    }
+  },
   "devDependencies": {
     "@ethereum-waffle/mock-contract": "^3.3.0",
-    "@ethersproject/abi": "^5.7.0",
-    "@ethersproject/bignumber": "^5.7.0",
-    "@ethersproject/contracts": "^5.7.0",
-    "@ethersproject/providers": "^5.7.1",
-    "@ethersproject/random": "^5.7.0",
+    "@ethersproject/abi": "^5.6.0",
+    "@ethersproject/bignumber": "^5.6.0",
+    "@ethersproject/contracts": "^5.6.0",
+    "@ethersproject/providers": "^5.6.1",
+    "@ethersproject/random": "^5.6.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
