--- a/core/services/chainlink/testdata/config-invalid.toml
+++ b/core/services/chainlink/testdata/config-invalid.toml
@@ -22,6 +22,7 @@ BlockHistorySize = 0
 
 [[EVM.Nodes]]
 Name = 'foo'
+SendOnly = true
 
 [[EVM.Nodes]]
 Name = 'foo'
@@ -54,6 +55,29 @@ ChainType = 'Arbitrum'
 FinalityDepth = 0
 MinIncomingConfirmations = 0
 
+[[EVM]]
+ChainID = '99'
+
+[[EVM.Nodes]]
+HTTPURl = ''
+
+[[EVM.Nodes]]
+WSURL = 'http://asdf.test'
+
+[[EVM.Nodes]]
+Name = ''
+HTTPURl = 'ws://foo.bar'
+
+[[EVM.Nodes]]
+Name = 'dupe'
+WSURL = 'ws://dupe.com'
+
+[[EVM.Nodes]]
+Name = 'dupe2'
+WSURL = 'ws://dupe.com'
+
+[[EVM]]
+
 [[Solana]]
 ChainID = 'mainnet'
 
@@ -65,6 +89,8 @@ Name = 'bar'
 
 [[Solana.Nodes]]
 Name = 'bar'
+
+[[Solana]]
 
 [[Starknet]]
 
@@ -76,6 +102,8 @@ URL = 'http://stark.node'
 Name = 'primary'
 URL = 'http://second.stark.node'
 
+[[Starknet]]
+
 [[Terra]]
 ChainID = 'Bombay-12'
 
@@ -87,3 +115,5 @@ Name = 'test'
 
 [[Terra]]
 ChainID = 'Bombay-12'
+
+[[Terra]]
